<resources>
    <string name="app_name">AndroidGames</string>
    <string name="title_2048">2048</string>
    <string name="title_senku">Senku</string>
    <string name="score">SCORE</string>
    <string name="time">TIME</string>
    <string name="best">BEST</string>
    <string name="back">BACK</string>
    <string name="undo">UNDO</string>
    <string name="newGame">NEW GAME</string>
    <string name="copyrightText">Version 1.0.0\nCopyright © 2023 RiotGames\nAll Rights Reserved.</string>
    <string name="title_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_register">Register</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="title_send">Send</string>
    <string name="userInfoTitle">Change info user</string>
    <string name="title_save">Save</string>
    <string name="highscore_title">Highscores</string>
</resources>