<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:background="@color/backgroundBrown"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tittleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/size_2048"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/tittleApp"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnStartGame2048"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_2048"
            android:textColor="@color/backgroundBrown"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/buttonBrown"
            />

        <Button
            android:id="@+id/btnStartSenku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_senku"
            android:textColor="@color/backgroundBrown"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/buttonBrown"
            />

    </LinearLayout>



</LinearLayout>