<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game2048"
    android:padding="16dp"
    android:background="@color/backgroundBrown"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_2048"
        android:textColor="@color/titleBrown"
        android:textSize="64dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_border_score2048"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/backgroundBrown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/backgroundBrown"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/buttonBrown"
        android:text="@string/newGame"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2048"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_score2048"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best"
            android:textColor="@color/backgroundBrown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="0"
            android:textColor="@color/backgroundBrown"
            android:textSize="24dp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout2048"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/rounded_border_score2048"
        android:columnCount="4"
        android:rowCount="4"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

        <TextView
            style="@style/gridCells"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            />

    </GridLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/buttonBrown"
        android:textSize="24dp"
        android:text="@string/back"
        android:textColor="@color/backgroundBrown"/>

</androidx.constraintlayout.widget.ConstraintLayout>